// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceFieldset renders a disabled list 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #656d76;
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #656d76;
  cursor: not-allowed;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c6:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c6:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c6 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              disabled={true}
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              disabled={true}
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a fieldset with a description 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > input {
  margin-left: 0;
  margin-right: 0;
}

.c8 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c9 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  font-size: 14px;
  color: #1F2328;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c7:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c7:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c7:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c7:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c7:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c7:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c7 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
      <span
        className="c3"
        color="fg.default"
        fontSize={1}
      >
        Description
      </span>
    </div>
    <ul
      className="c4"
    >
      <li>
        <div
          className="c5"
          display="flex"
        >
          <div
            className="c6"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c7"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c5"
          display="flex"
        >
          <div
            className="c6"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c7"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a list of items with leading visuals and captions 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c8 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin-left: 8px;
  color: #1F2328;
}

.c7 > * {
  min-width: 24px;
  min-height: 24px;
  fill: currentColor;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c9 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c10 {
  font-size: 12px;
  color: #656d76;
  display: block;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c6:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c6:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c6 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            color="fg.default"
          >
            <svg
              aria-hidden="true"
              className="octicon octicon-mark-github"
              fill="currentColor"
              focusable="false"
              height={16}
              role="img"
              style={
                {
                  "display": "inline-block",
                  "overflow": "visible",
                  "userSelect": "none",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
              />
            </svg>
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
            <span
              className="c10"
              color="fg.muted"
              display="block"
              fontSize={0}
            >
              Caption one
            </span>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            color="fg.default"
          >
            <svg
              aria-hidden="true"
              className="octicon octicon-mark-github"
              fill="currentColor"
              focusable="false"
              height={16}
              role="img"
              style={
                {
                  "display": "inline-block",
                  "overflow": "visible",
                  "userSelect": "none",
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
              />
            </svg>
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
            <span
              className="c10"
              color="fg.muted"
              display="block"
              fontSize={0}
            >
              Caption two
            </span>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a list with selected items 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: 3px;
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c6::before {
  width: var(--base-size-16,16px);
  height: var(--base-size-16,16px);
  visibility: hidden;
  content: '';
  background-color: #ffffff;
  -webkit-transition: visibility 0s linear 230ms;
  transition: visibility 0s linear 230ms;
  -webkit-clip-path: inset(var(--base-size-16,16px) 0 0 0);
  clip-path: inset(var(--base-size-16,16px) 0 0 0);
  -webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEyIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMTEuNzgwMyAwLjIxOTYyNUMxMS45MjEgMC4zNjA0MjcgMTIgMC41NTEzMDUgMTIgMC43NTAzMTNDMTIgMC45NDkzMjEgMTEuOTIxIDEuMTQwMTkgMTEuNzgwMyAxLjI4MUw0LjUxODYgOC41NDA0MkM0LjM3Nzc1IDguNjgxIDQuMTg2ODIgOC43NiAzLjk4Nzc0IDguNzZDMy43ODg2NyA4Ljc2IDMuNTk3NzMgOC42ODEgMy40NTY4OSA4LjU0MDQyTDAuMjAxNjIyIDUuMjg2MkMwLjA2ODkyNzcgNS4xNDM4MyAtMC4wMDMzMDkwNSA0Ljk1NTU1IDAuMDAwMTE2NDkzIDQuNzYwOThDMC4wMDM1NTIwNSA0LjU2NjQzIDAuMDgyMzg5NCA0LjM4MDgxIDAuMjIwMDMyIDQuMjQzMjFDMC4zNTc2NjUgNC4xMDU2MiAwLjU0MzM1NSA0LjAyNjgxIDAuNzM3OTcgNC4wMjMzOEMwLjkzMjU4NCA0LjAxOTk0IDEuMTIwOTMgNC4wOTIxNyAxLjI2MzM0IDQuMjI0ODJMMy45ODc3NCA2Ljk0ODM1TDEwLjcxODYgMC4yMTk2MjVDMTAuODU5NSAwLjA3ODk5MjMgMTEuMDUwNCAwIDExLjI0OTUgMEMxMS40NDg1IDAgMTEuNjM5NSAwLjA3ODk5MjMgMTEuNzgwMyAwLjIxOTYyNVoiIGZpbGw9IndoaXRlIi8+Cjwvc3ZnPgo=');
  -webkit-mask-size: 75%;
  mask-size: 75%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
}

.c6:checked,
.c6:indeterminate {
  background: #0969da;
  border-color: #0969da;
}

.c6:checked {
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
  transition: background-color,border-color 80ms cubic-bezier(0.32,0,0.67,0) 0ms;
}

.c6:checked::before {
  visibility: visible;
  -webkit-transition: visibility 0s linear 0s;
  transition: visibility 0s linear 0s;
}

.c6:checked:disabled {
  cursor: not-allowed;
  background-color: #656d76;
  border-color: #656d76;
  opacity: 1;
}

.c6:checked:disabled::before {
  background-color: #ffffff;
}

.c6:indeterminate {
  background: #0969da;
}

.c6:indeterminate::before {
  -webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMiIgdmlld0JveD0iMCAwIDEwIDIiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMCAxQzAgMC40NDc3MTUgMC40NDc3MTUgMCAxIDBIOUM5LjU1MjI5IDAgMTAgMC40NDc3MTUgMTAgMUMxMCAxLjU1MjI4IDkuNTUyMjkgMiA5IDJIMUMwLjQ0NzcxNSAyIDAgMS41NTIyOCAwIDFaIiBmaWxsPSJ3aGl0ZSIvPgo8L3N2Zz4K');
  mask-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAiIGhlaWdodD0iMiIgdmlld0JveD0iMCAwIDEwIDIiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGZpbGwtcnVsZT0iZXZlbm9kZCIgY2xpcC1ydWxlPSJldmVub2RkIiBkPSJNMCAxQzAgMC40NDc3MTUgMC40NDc3MTUgMCAxIDBIOUM5LjU1MjI5IDAgMTAgMC40NDc3MTUgMTAgMUMxMCAxLjU1MjI4IDkuNTUyMjkgMiA5IDJIMUMwLjQ0NzcxNSAyIDAgMS41NTIyOCAwIDFaIiBmaWxsPSJ3aGl0ZSIvPgo8L3N2Zz4K');
  visibility: visible;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media screen and (prefers-reduced-motion:no-preference) {
  .c6::before {
    -webkit-animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
    animation: checkmarkOut 80ms cubic-bezier(0.65,0,0.35,1) forwards;
  }
}

@media screen and (prefers-reduced-motion:no-preference) {
  .c6:checked::before,
  .c6:indeterminate::before {
    -webkit-animation: checkmarkIn 80ms cubic-bezier(0.65,0,0.35,1) forwards 80ms;
    animation: checkmarkIn 80ms cubic-bezier(0.65,0,0.35,1) forwards 80ms;
  }
}

@media (forced-colors:active) {
  .c6:checked {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              aria-required="false"
              checked={true}
              className="c6"
              id="react-aria-3"
              name="labelOne"
              onChange={[Function]}
              type="checkbox"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              aria-required="false"
              checked={true}
              className="c6"
              id="react-aria-4"
              name="labelTwo"
              onChange={[Function]}
              type="checkbox"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-5"
              name="labelThree"
              onChange={[Function]}
              type="checkbox"
              value="labelThree"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-5"
            >
              Label three
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders a required fieldset 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > input {
  margin-left: 0;
  margin-right: 0;
}

.c8 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-right: 4px;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c9 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c7:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c7:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c7:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c7:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c7:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c7:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c7 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
        title="required field"
      >
        <span
          className="c3"
          display="flex"
        >
          <div
            className="c4"
          >
            Legend
          </div>
          <span>
            *
          </span>
        </span>
      </legend>
    </div>
    <ul
      className="c5"
    >
      <li>
        <div
          className="c3"
          display="flex"
        >
          <div
            className="c6"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c7"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c3"
          display="flex"
        >
          <div
            className="c6"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c7"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c8"
            display="flex"
          >
            <label
              className="c9"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders default 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c6:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c6:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c6 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders with a custom name and id passed 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c6:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c6:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c6 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className="c1"
    >
      <legend
        className="c2"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c3"
    >
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-2"
              name="radioGroup"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-2"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c4"
          display="flex"
        >
          <div
            className="c5"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c6"
              id="react-aria-3"
              name="radioGroup"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c7"
            display="flex"
          >
            <label
              className="c8"
              htmlFor="react-aria-3"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders with a hidden legend 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 > input {
  margin-left: 0;
  margin-right: 0;
}

.c6 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #1F2328;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #6e7781;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c5:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
  border-color: #d0d7de;
}

.c5:checked {
  border-color: #0969da;
  border-width: var(--base-size-4,4px);
}

.c5:checked:disabled {
  cursor: not-allowed;
  border-color: #656d76;
}

.c5:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c5:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c5:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c5 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <fieldset
    aria-describedby=""
    className="c0"
  >
    <div
      className=""
    >
      <legend
        className="c1"
      >
        Legend
      </legend>
    </div>
    <ul
      className="c2"
    >
      <li>
        <div
          className="c3"
          display="flex"
        >
          <div
            className="c4"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c5"
              id="react-aria-3"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelOne"
            />
          </div>
          <div
            className="c6"
            display="flex"
          >
            <label
              className="c7"
              htmlFor="react-aria-3"
            >
              Label one
            </label>
          </div>
        </div>
      </li>
      <li>
        <div
          className="c3"
          display="flex"
        >
          <div
            className="c4"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              aria-required="false"
              checked={false}
              className="c5"
              id="react-aria-4"
              name="react-aria-2"
              onChange={[Function]}
              type="radio"
              value="labelTwo"
            />
          </div>
          <div
            className="c6"
            display="flex"
          >
            <label
              className="c7"
              htmlFor="react-aria-4"
            >
              Label two
            </label>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`ChoiceFieldset renders with a success validation message 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  margin-top: 16px;
}

.c10 {
  height: auto;
  overflow: hidden;
}

.c13 {
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  line-height: 1.3333333333333333;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: bold;
  font-size: 14px;
  display: block;
  color: fg.default;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c11 {
  -webkit-animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
  animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
}

.c12 {
  font-size: 12px;
  font-weight: bold;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  color: success.fg;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 a {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c6:checked {
  border-width: var(--base-size-4,4px);
}

.c6:checked:disabled {
  cursor: not-allowed;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c6 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <div>
    <fieldset
      aria-describedby="react-aria-1-validationMsg"
      class="c0"
    >
      <div
        class="c1"
      >
        <legend
          class="c2"
        >
          Legend
        </legend>
      </div>
      <ul
        class="c3"
      >
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-3"
                name="react-aria-2"
                type="radio"
                value="labelOne"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-3"
              >
                Label one
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-4"
                name="react-aria-2"
                type="radio"
                value="labelTwo"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-4"
              >
                Label two
              </label>
            </div>
          </div>
        </li>
      </ul>
    </fieldset>
    <div
      class="c9"
    >
      <div
        class="c10"
        height="auto"
        overflow="hidden"
      >
        <div
          class="c11"
        >
          <span
            aria-live="polite"
            class="c12"
          >
            <span
              aria-hidden="true"
              class="c13"
              display="flex"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check-circle-fill"
                fill="currentColor"
                focusable="false"
                height="12"
                role="img"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 12 12"
                width="12"
              >
                <path
                  d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm-.705 8.737L9.63 4.403 8.392 3.166 5.295 6.263l-1.7-1.702L2.356 5.8l2.938 2.938Z"
                />
              </svg>
            </span>
            <span
              class="c14"
              id="react-aria-1-validationMsg"
            >
              You made the right selection
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChoiceFieldset renders with an error validation message 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: none;
}

.c1 {
  margin-bottom: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > input {
  margin-left: 0;
  margin-right: 0;
}

.c7 {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  margin-top: 16px;
}

.c10 {
  height: auto;
  overflow: hidden;
}

.c13 {
  margin-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  line-height: 1.3333333333333333;
}

.c2 {
  font-size: 16px;
  padding: 0;
}

.c8 {
  font-weight: bold;
  font-size: 14px;
  display: block;
  color: fg.default;
  cursor: pointer;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c11 {
  -webkit-animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
  animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
}

.c12 {
  font-size: 12px;
  font-weight: bold;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  color: danger.fg;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 a {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: grid;
  height: var(--base-size-16,16px);
  margin: 0;
  margin-top: 0.125rem;
  place-content: center;
  position: relative;
  width: var(--base-size-16,16px);
  border-radius: var(--borderRadius-full,100vh);
  -webkit-transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
  transition: background-color,border-color 80ms cubic-bezier(0.33,1,0.68,1);
}

.c6:disabled {
  background-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c6:checked {
  border-width: var(--base-size-4,4px);
}

.c6:checked:disabled {
  cursor: not-allowed;
}

.c6:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: 2px;
}

.c6:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c6:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: 2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 > li + li {
  margin-top: 8px;
}

@media (forced-colors:active) {
  .c6 {
    background-color: canvastext;
    border-color: canvastext;
  }
}

<div>
  <div>
    <fieldset
      aria-describedby="react-aria-1-validationMsg"
      class="c0"
    >
      <div
        class="c1"
      >
        <legend
          class="c2"
        >
          Legend
        </legend>
      </div>
      <ul
        class="c3"
      >
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-3"
                name="react-aria-2"
                type="radio"
                value="labelOne"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-3"
              >
                Label one
              </label>
            </div>
          </div>
        </li>
        <li>
          <div
            class="c4"
            display="flex"
          >
            <div
              class="c5"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                aria-required="false"
                class="c6"
                id="react-aria-4"
                name="react-aria-2"
                type="radio"
                value="labelTwo"
              />
            </div>
            <div
              class="c7"
              display="flex"
            >
              <label
                class="c8"
                for="react-aria-4"
              >
                Label two
              </label>
            </div>
          </div>
        </li>
      </ul>
    </fieldset>
    <div
      class="c9"
    >
      <div
        class="c10"
        height="auto"
        overflow="hidden"
      >
        <div
          class="c11"
        >
          <span
            aria-live="polite"
            class="c12"
          >
            <span
              aria-hidden="true"
              class="c13"
              display="flex"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-alert-fill"
                fill="currentColor"
                focusable="false"
                height="12"
                role="img"
                style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                viewBox="0 0 12 12"
                width="12"
              >
                <path
                  d="M4.855.708c.5-.896 1.79-.896 2.29 0l4.675 8.351a1.312 1.312 0 0 1-1.146 1.954H1.33A1.313 1.313 0 0 1 .183 9.058ZM7 7V3H5v4Zm-1 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
                />
              </svg>
            </span>
            <span
              class="c14"
              id="react-aria-1-validationMsg"
            >
              You made the wrong selection
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
